--- a/src/main/resources/com/sem1project/tasktracker/hello-view.fxml
+++ b/src/main/resources/com/sem1project/tasktracker/hello-view.fxml
@@ -16,25 +16,7 @@
             <Button mnemonicParsing="false" text="Resize" />
          </children>
       </HBox>
-      <MenuBar layoutX="-12.0" layoutY="-2.0">
-        <menus>
-          <Menu mnemonicParsing="false" text="File">
-            <items>
-              <MenuItem fx:id="close" mnemonicParsing="false" text="Close" />
-            </items>
-          </Menu>
-          <Menu mnemonicParsing="false" text="Edit">
-            <items>
-              <MenuItem mnemonicParsing="false" text="Delete" />
-            </items>
-          </Menu>
-          <Menu mnemonicParsing="false" text="Help">
-            <items>
-              <MenuItem mnemonicParsing="false" text="About" />
-            </items>
-          </Menu>
-        </menus>
-      </MenuBar>
+        <fx:include source="MenuBar.fxml"></fx:include>
       <AnchorPane layoutX="187.0" layoutY="34.0" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: blue;" />
    </children>
 </Pane>
