--- a/src/main/resources/com/sem1project/tasktracker/hello-view.fxml
+++ b/src/main/resources/com/sem1project/tasktracker/hello-view.fxml
@@ -1,22 +1,41 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sem1project.tasktracker.controller.draw.drawWaterMarkPane">
    <children>
-      <HBox layoutX="193.0" layoutY="279.0" prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: pink;">
+      <MenuBar layoutX="-12.0" layoutY="-2.0" prefHeight="32.0" prefWidth="613.0">
+        <menus>
+          <Menu mnemonicParsing="false" text="File">
+            <items>
+              <MenuItem fx:id="close" mnemonicParsing="false" text="Close" />
+            </items>
+          </Menu>
+          <Menu mnemonicParsing="false" text="Edit">
+            <items>
+              <MenuItem mnemonicParsing="false" text="Delete" />
+            </items>
+          </Menu>
+          <Menu mnemonicParsing="false" text="Help">
+            <items>
+              <MenuItem mnemonicParsing="false" text="About" />
+            </items>
+          </Menu>
+        </menus>
+      </MenuBar>
+      <AnchorPane layoutX="148.0" layoutY="61.0" prefHeight="211.0" prefWidth="280.0" style="-fx-background-color: blue;">
          <children>
-            <Button fx:id="waterMarkButt" mnemonicParsing="false" onAction="#OnDrawWaterMark" text="WaterMark" />
-            <Button mnemonicParsing="false" text="Resize" />
-         </children>
-      </HBox>
-        <fx:include source="MenuBar.fxml"></fx:include>
-      <AnchorPane layoutX="187.0" layoutY="34.0" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: blue;" />
+            <ListView layoutX="-6.0" prefHeight="211.0" prefWidth="318.0" />
+            <Label layoutX="66.0" layoutY="95.0" text="Drag or upload files in here" />
+         </children></AnchorPane>
+      <Button fx:id="waterMarkButt" layoutX="206.0" layoutY="292.0" mnemonicParsing="false" onAction="#OnDrawWaterMark" text="WaterMark" />
+      <Button layoutX="317.0" layoutY="292.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="78.0" text="Resize" />
    </children>
 </Pane>
