--- a/src/main/resources/com/sem1project/tasktracker/hello-view.fxml
+++ b/src/main/resources/com/sem1project/tasktracker/hello-view.fxml
@@ -32,10 +32,10 @@
       </MenuBar>
       <AnchorPane layoutX="148.0" layoutY="61.0" prefHeight="211.0" prefWidth="280.0" style="-fx-background-color: blue;">
          <children>
-            <ListView layoutX="-6.0" prefHeight="211.0" prefWidth="318.0" />
-            <Label layoutX="66.0" layoutY="95.0" text="Drag or upload files in here" />
+            <ListView fx:id="inputListView" layoutX="-6.0" prefHeight="211.0" prefWidth="318.0" />
          </children></AnchorPane>
       <Button fx:id="waterMarkButt" layoutX="206.0" layoutY="292.0" mnemonicParsing="false" onAction="#OnDrawWaterMark" text="WaterMark" />
       <Button layoutX="317.0" layoutY="292.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="78.0" text="Resize" />
+      <Label layoutX="197.0" layoutY="40.0" text="Drag or upload files in here" />
    </children>
 </Pane>
