--- a/src/main/resources/com/sem1project/tasktracker/WaterMarkPane.fxml
+++ b/src/main/resources/com/sem1project/tasktracker/WaterMarkPane.fxml
@@ -19,8 +19,8 @@
             <Label layoutX="22.0" layoutY="14.0" text="Text" />
             <TextField fx:id="watermarkText" layoutX="22.0" layoutY="35.0" onAction="#OnWaterMarkText" />
             <ColorPicker layoutX="217.0" layoutY="35.0" prefHeight="31.0" prefWidth="100.0" />
-            <Label layoutX="22.0" layoutY="92.0" text="Visibility" />
-            <Slider layoutX="106.0" layoutY="94.0" />
+            <Label fx:id="visibility " layoutX="22.0" layoutY="92.0" text="Visibility" />
+            <Slider fx:id ="visibilitySlider" layoutX="106.0" layoutY="94.0" />
             <Label layoutX="32.0" layoutY="223.0" text="Image Format" />
             <Label layoutX="22.0" layoutY="133.0" text="Rotation" />
             <Label layoutX="22.0" layoutY="168.0" text="Size" />
