--- a/src/main/resources/com/sem1project/tasktracker/hello-view.fxml
+++ b/src/main/resources/com/sem1project/tasktracker/hello-view.fxml
@@ -1,22 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
 
-
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<Pane fx:id="ImageView" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sem1project.tasktracker.controller.HelloController">
    <children>
-      <HBox layoutX="193.0" layoutY="279.0" prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: pink;">
-         <children>
-            <Button mnemonicParsing="false" text="WaterMark" />
-            <Button mnemonicParsing="false" text="Resize" />
-         </children>
-      </HBox>
       <MenuBar layoutX="-12.0" layoutY="-2.0">
         <menus>
           <Menu mnemonicParsing="false" text="File">
@@ -36,6 +31,19 @@
           </Menu>
         </menus>
       </MenuBar>
-      <AnchorPane layoutX="187.0" layoutY="34.0" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: blue;" />
+      <VBox alignment="CENTER" layoutX="250.0" layoutY="277.0" prefHeight="78.0" prefWidth="100.0">
+         <children>
+            <Button fx:id="waterbtn" mnemonicParsing="false" text="Watermark">
+               <VBox.margin>
+                  <Insets bottom="10.0" />
+               </VBox.margin>
+            </Button>
+            <Button fx:id="resizebtn" mnemonicParsing="false" text="Resize" />
+         </children>
+      </VBox>
+<!--      <Region fx:id="dropRegion" layoutX="225.0" layoutY="88.0" prefHeight="120.0" prefWidth="150.0" />-->
+      <ListView fx:id="inputListView" layoutX="200.0" layoutY="48.0" prefHeight="200.0" prefWidth="200.0" />
+      <Label layoutX="247.0" layoutY="24.0" text="Drop the files below" />
+<!--      <ListView fx:id="inputListView" layoutX="210.0" layoutY="73.0" prefHeight="150.0" prefWidth="180.0" style="-fx-border-color:black;" />-->
    </children>
 </Pane>
