adding bg img to home pane

--- a/src/main/resources/com/sem1project/tasktracker/hello-view.fxml
+++ b/src/main/resources/com/sem1project/tasktracker/hello-view.fxml
@@ -6,11 +6,18 @@
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sem1project.tasktracker.controller.draw.drawWaterMarkPane">
    <children>
+      <ImageView fitHeight="803.0" fitWidth="661.0" layoutX="-52.0" layoutY="-39.0">
+         <image>
+            <Image url="@assets/bgdecor.png" />
+         </image>
+      </ImageView>
       <MenuBar layoutX="-12.0" layoutY="-2.0" prefHeight="32.0" prefWidth="613.0">
         <menus>
           <Menu mnemonicParsing="false" text="File">
@@ -36,6 +43,6 @@
          </children></AnchorPane>
       <Button fx:id="waterMarkButt" layoutX="206.0" layoutY="292.0" mnemonicParsing="false" onAction="#OnDrawWaterMark" text="WaterMark" />
       <Button layoutX="317.0" layoutY="292.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="78.0" text="Resize" />
-      <Label layoutX="197.0" layoutY="40.0" text="Drag or upload files in here" />
+      <Label layoutX="204.0" layoutY="40.0" text="Drag or upload files in here" />
    </children>
 </Pane>
