--- a/src/main/resources/com/sem1project/tasktracker/WaterMarkPane.fxml
+++ b/src/main/resources/com/sem1project/tasktracker/WaterMarkPane.fxml
@@ -17,7 +17,7 @@
       <AnchorPane layoutX="10.0" layoutY="10.0" minHeight="0.0" minWidth="0.0" prefHeight="511.0" prefWidth="800.0">
          <children>
             <Label layoutX="22.0" layoutY="14.0" text="Text" />
-            <TextField fx:id="watermarkText" layoutX="22.0" layoutY="35.0" onAction="#OnWaterMarkText" />
+            <TextField fx:id="watermarkText" layoutX="22.0" layoutY="35.0"  />
             <ColorPicker layoutX="217.0" layoutY="35.0" prefHeight="31.0" prefWidth="100.0" />
             <Label fx:id="visibility " layoutX="22.0" layoutY="92.0" text="Visibility" />
             <Slider fx:id ="visibilitySlider" layoutX="106.0" layoutY="94.0" />
