--- a/src/main/resources/com/sem1project/tasktracker/hello-view.fxml
+++ b/src/main/resources/com/sem1project/tasktracker/hello-view.fxml
@@ -1,48 +1,67 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.paint.*?>
+<?import javafx.scene.text.*?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sem1project.tasktracker.controller.draw.drawWaterMarkPane">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="499.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sem1project.tasktracker.controller.draw.drawWaterMarkPane">
    <children>
-      <ImageView fitHeight="803.0" fitWidth="661.0" layoutX="-52.0" layoutY="-39.0">
+      <ImageView fitHeight="842.0" fitWidth="685.0" layoutX="-76.0" layoutY="-81.0">
          <image>
             <Image url="@assets/bgdecor.png" />
          </image>
       </ImageView>
-      <MenuBar layoutX="-12.0" layoutY="-2.0" prefHeight="32.0" prefWidth="613.0">
-        <menus>
-          <Menu mnemonicParsing="false" text="File">
-            <items>
-              <MenuItem fx:id="close" mnemonicParsing="false" text="Close" />
-            </items>
-          </Menu>
-          <Menu mnemonicParsing="false" text="Edit">
-            <items>
-              <MenuItem mnemonicParsing="false" text="Delete" />
-            </items>
-          </Menu>
-          <Menu mnemonicParsing="false" text="Help">
-            <items>
-              <MenuItem mnemonicParsing="false" text="About" />
-            </items>
-          </Menu>
-        </menus>
-      </MenuBar>
-      <AnchorPane layoutX="148.0" layoutY="61.0" prefHeight="211.0" prefWidth="280.0" style="-fx-background-color: blue;">
+
+      <AnchorPane layoutX="131.0" layoutY="76.0" prefHeight="255.0" prefWidth="308.0">
          <children>
-            <ListView fx:id="inputListView" layoutX="-6.0" prefHeight="211.0" prefWidth="318.0" />
+            <ListView fx:id="inputListView" layoutY="44.0" prefHeight="203.0" prefWidth="333.0" style="-fx-border-style: dashed;" />
+            <Label layoutX="49.0" text="Drag or upload files in here">
+               <font>
+                  <Font name="Berlin Sans FB" size="21.0" />
+               </font>
+            </Label>
          </children></AnchorPane>
-      <Button fx:id="waterMarkButt" layoutX="206.0" layoutY="292.0" mnemonicParsing="false" onAction="#OnDrawWaterMark" text="WaterMark" />
-      <Button layoutX="317.0" layoutY="292.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="78.0" text="Resize" />
-      <Label layoutX="204.0" layoutY="40.0" text="Drag or upload files in here" />
+      <Button fx:id="waterMarkButt" layoutX="193.0" layoutY="354.0" mnemonicParsing="false" onAction="#OnDrawWaterMark" prefHeight="40.0" prefWidth="99.0" style="-fx-background-color: pink;" text="WaterMark" textAlignment="JUSTIFY">
+         <font>
+            <Font name="Calibri" size="15.0" />
+         </font>
+         <textFill>
+            <LinearGradient endX="1.0" endY="1.0" startX="1.0" startY="1.0">
+               <stops>
+                  <Stop>
+                     <color>
+                        <Color />
+                     </color>
+                  </Stop>
+                  <Stop offset="1.0">
+                     <color>
+                        <Color red="1.0" green="1.0" blue="1.0" />
+                     </color>
+                  </Stop>
+               </stops>
+            </LinearGradient>
+         </textFill></Button>
+      <Button layoutX="309.0" layoutY="354.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="99.0" style="-fx-background-color: pink;" text="Resize" textAlignment="JUSTIFY">
+         <font>
+            <Font name="Calibri" size="15.0" />
+         </font>
+         <textFill>
+            <LinearGradient endX="1.0" endY="1.0" startX="1.0" startY="1.0">
+               <stops>
+                  <Stop>
+                     <color>
+                        <Color />
+                     </color>
+                  </Stop>
+                  <Stop offset="1.0">
+                     <color>
+                        <Color red="1.0" green="1.0" blue="1.0" />
+                     </color>
+                  </Stop>
+               </stops>
+            </LinearGradient>
+         </textFill></Button>
    </children>
 </Pane>
