--- a/src/main/resources/com/sem1project/tasktracker/hello-view.fxml
+++ b/src/main/resources/com/sem1project/tasktracker/hello-view.fxml
@@ -16,12 +16,7 @@
 
       <AnchorPane layoutX="131.0" layoutY="76.0" prefHeight="255.0" prefWidth="308.0">
          <children>
-            <ListView fx:id="inputListView" layoutY="44.0" prefHeight="203.0" prefWidth="333.0" style="-fx-border-style: dashed;" />
-            <Label layoutX="49.0" text="Drag or upload files in here">
-               <font>
-                  <Font name="Berlin Sans FB" size="21.0" />
-               </font>
-            </Label>
+            <ListView fx:id="inputListView" layoutY="-8.0" prefHeight="268.0" prefWidth="333.0" style="-fx-border-style: dashed;" />
          </children></AnchorPane>
       <Button fx:id="waterMarkButt" layoutX="193.0" layoutY="354.0" mnemonicParsing="false" onAction="#OnDrawWaterMark" prefHeight="40.0" prefWidth="99.0" style="-fx-background-color: pink;" text="WaterMark" textAlignment="JUSTIFY">
          <font>
@@ -63,5 +58,10 @@
                </stops>
             </LinearGradient>
          </textFill></Button>
+      <Label layoutX="210.0" layoutY="44.0" text="Drag or upload files in here">
+         <font>
+            <Font name="Arial" size="15.0" />
+         </font>
+      </Label>
    </children>
 </Pane>
