--- a/src/main/resources/com/sem1project/tasktracker/WaterMarkWorkPane.fxml
+++ b/src/main/resources/com/sem1project/tasktracker/WaterMarkWorkPane.fxml
@@ -47,7 +47,7 @@
         </rowConstraints>
          <children>
             <Button mnemonicParsing="false" text="Button" GridPane.columnIndex="1" />
-            <Button mnemonicParsing="false" prefHeight="41.0" prefWidth="43.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+            <Button mnemonicParsing="false" onAction="#centerButtclicked" prefHeight="41.0" prefWidth="43.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <graphic>
                   <ImageView fitHeight="18.0" fitWidth="19.0">
                      <image>
@@ -55,7 +55,7 @@
                      </image>
                   </ImageView>
                </graphic></Button>
-            <Button fx:id="up" mnemonicParsing="false" prefHeight="27.0" prefWidth="47.0" GridPane.columnIndex="1">
+            <Button fx:id="upButton" mnemonicParsing="false" onAction="#UpButtclicked" prefHeight="27.0" prefWidth="47.0" GridPane.columnIndex="1">
                <graphic>
                   <ImageView fitHeight="23.0" fitWidth="24.0">
                      <image>
@@ -63,7 +63,7 @@
                      </image>
                   </ImageView>
                </graphic></Button>
-            <Button fx:id="left" mnemonicParsing="false" prefHeight="87.0" prefWidth="131.0" GridPane.rowIndex="1">
+            <Button mnemonicParsing="false" onAction="#leftButtclicked" prefHeight="87.0" prefWidth="131.0" GridPane.rowIndex="1">
                <graphic>
                   <ImageView fitHeight="26.0" fitWidth="25.0">
                      <image>
@@ -71,7 +71,7 @@
                      </image>
                   </ImageView>
                </graphic></Button>
-            <Button fx:id="right" mnemonicParsing="false" prefHeight="33.0" prefWidth="32.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
+            <Button mnemonicParsing="false" onAction="#rightButtclicked" prefHeight="33.0" prefWidth="32.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
                <graphic>
                   <ImageView fitHeight="25.0" fitWidth="21.0">
                      <image>
@@ -79,7 +79,7 @@
                      </image>
                   </ImageView>
                </graphic></Button>
-            <Button fx:id="down" mnemonicParsing="false" GridPane.columnIndex="1" GridPane.rowIndex="2">
+            <Button mnemonicParsing="false" onAction="#downButtclicked" GridPane.columnIndex="1" GridPane.rowIndex="2">
                <graphic>
                   <ImageView fitHeight="25.0" fitWidth="23.0">
                      <image>
