--- a/src/main/resources/com/sem1project/tasktracker/hello-view.fxml
+++ b/src/main/resources/com/sem1project/tasktracker/hello-view.fxml
@@ -1,16 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.paint.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.paint.Color?>
+<?import javafx.scene.paint.LinearGradient?>
+<?import javafx.scene.paint.Stop?>
+<?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="499.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sem1project.tasktracker.controller.draw.drawWaterMarkPane">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="499.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sem1project.tasktracker.controller.draw.drawWaterMarkPane">
    <children>
-      <ImageView fitHeight="842.0" fitWidth="685.0" layoutX="-76.0" layoutY="-81.0">
+      <ImageView fitHeight="657.0" fitWidth="607.0" layoutX="-3.0" layoutY="-157.0">
          <image>
-            <Image url="@assets/bgdecor.png" />
+            <Image url="@assets/bbsparkle.png" />
          </image>
       </ImageView>
 
@@ -18,7 +25,7 @@
          <children>
             <ListView fx:id="inputListView" layoutY="-8.0" prefHeight="268.0" prefWidth="333.0" style="-fx-border-style: dashed;" />
          </children></AnchorPane>
-      <Button fx:id="waterMarkButt" layoutX="193.0" layoutY="354.0" mnemonicParsing="false" onAction="#OnDrawWaterMark" prefHeight="40.0" prefWidth="99.0" style="-fx-background-color: pink;" text="WaterMark" textAlignment="JUSTIFY">
+      <Button fx:id="waterMarkButt" layoutX="193.0" layoutY="424.0" mnemonicParsing="false" onAction="#OnDrawWaterMark" prefHeight="40.0" prefWidth="99.0" style="-fx-background-color: pink;" text="WaterMark" textAlignment="JUSTIFY">
          <font>
             <Font name="Calibri" size="15.0" />
          </font>
@@ -38,7 +45,7 @@
                </stops>
             </LinearGradient>
          </textFill></Button>
-      <Button layoutX="309.0" layoutY="354.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="99.0" style="-fx-background-color: pink;" text="Resize" textAlignment="JUSTIFY">
+      <Button layoutX="309.0" layoutY="424.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="99.0" style="-fx-background-color: pink;" text="Resize" textAlignment="JUSTIFY">
          <font>
             <Font name="Calibri" size="15.0" />
          </font>
@@ -63,5 +70,17 @@
             <Font name="Arial" size="15.0" />
          </font>
       </Label>
+      <Button layoutX="264.0" layoutY="345.0" mnemonicParsing="false" onAction="#OnDeleteBtn" style="-fx-background-color: #fb3e2b; -fx-background-radius: 50%;">
+         <opaqueInsets>
+            <Insets />
+         </opaqueInsets>
+         <graphic>
+            <ImageView fitHeight="47.0" fitWidth="53.0">
+               <image>
+                  <Image url="@assets/trash.png" />
+               </image>
+            </ImageView>
+         </graphic>
+      </Button>
    </children>
 </Pane>
