--- a/src/main/resources/com/sem1project/tasktracker/resizeview.fxml
+++ b/src/main/resources/com/sem1project/tasktracker/resizeview.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sem1project.tasktracker.controller.ResizeviewController">
+<AnchorPane fx:id="anchorId" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sem1project.tasktracker.controller.ResizeviewController">
    <children>
       <Text layoutX="267.0" layoutY="54.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Resize">
          <font>
@@ -25,9 +25,9 @@
             <Label fx:id="label" layoutX="236.0" layoutY="52.0" />
             <TextField fx:id="widthValue" layoutX="323.0" layoutY="48.0" />
             <Button fx:id="deleteAll" layoutX="107.0" layoutY="221.0" mnemonicParsing="false" text="Delete All" />
-            <Button fx:id="add" layoutX="14.0" layoutY="221.0" mnemonicParsing="false" text="Add images" />
+            <Button fx:id="add" layoutX="14.0" layoutY="221.0" mnemonicParsing="false" onAction="#browse" text="Add images" />
             <ImageView fx:id="imgPreview" fitHeight="101.0" fitWidth="150.0" layoutX="273.0" layoutY="143.0" pickOnBounds="true" preserveRatio="true" />
-            <ComboBox layoutX="236.0" layoutY="113.0" prefWidth="150.0" />
+            <ComboBox fx:id="comboFile" layoutX="236.0" layoutY="113.0" onAction="#extension" prefWidth="150.0" />
             <Label fx:id="label1" layoutX="237.0" layoutY="89.0" text="Image format" />
 
          </children>
