--- a/src/main/resources/com/sem1project/tasktracker/resizeview.fxml
+++ b/src/main/resources/com/sem1project/tasktracker/resizeview.fxml
@@ -20,7 +20,7 @@
       <AnchorPane layoutX="56.0" layoutY="76.0" prefHeight="285.0" prefWidth="487.0">
          <children>
             <ListView fx:id="listView" layoutX="7.0" layoutY="13.0" prefHeight="200.0" prefWidth="200.0" />
-            <ComboBox fx:id="comboFun" layoutX="236.0" layoutY="14.0" onAction="#select" prefWidth="150.0" />
+            <ComboBox fx:id="comboFun" layoutX="322.0" layoutY="13.0" onAction="#select" prefWidth="150.0" />
             <Button fx:id="submit" layoutX="323.0" layoutY="246.0" mnemonicParsing="false" onAction="#resize" text="Resize" />
             <Label fx:id="label" layoutX="236.0" layoutY="52.0" />
             <TextField fx:id="widthValue" layoutX="323.0" layoutY="48.0" />
@@ -29,6 +29,7 @@
             <ImageView fx:id="imgPreview" fitHeight="101.0" fitWidth="150.0" layoutX="273.0" layoutY="143.0" pickOnBounds="true" preserveRatio="true" />
             <ComboBox fx:id="comboFile" layoutX="236.0" layoutY="113.0" onAction="#extension" prefWidth="150.0" />
             <Label fx:id="label1" layoutX="237.0" layoutY="89.0" text="Image format" />
+            <Label layoutX="237.0" layoutY="17.0" text="Image size" />
 
          </children>
       </AnchorPane>
