--- a/src/main/resources/com/sem1project/tasktracker/WaterMarkWorkPane.fxml
+++ b/src/main/resources/com/sem1project/tasktracker/WaterMarkWorkPane.fxml
@@ -16,7 +16,7 @@
 <?import javafx.scene.paint.LinearGradient?>
 <?import javafx.scene.paint.Stop?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="444.0" prefWidth="644.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sem1project.tasktracker.controller.WaterMarkPaneMainController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="444.0" prefWidth="644.0" style="-fx-background-color: #fbfaf8;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sem1project.tasktracker.controller.WaterMarkPaneMainController">
    <children>
       <Label layoutX="25.0" layoutY="14.0" text="Text" />
       <TextField fx:id="watermarkText" layoutX="25.0" layoutY="42.0" />
