--- a/src/main/resources/com/sem1project/tasktracker/resizeview.fxml
+++ b/src/main/resources/com/sem1project/tasktracker/resizeview.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="anchorId" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sem1project.tasktracker.controller.ResizeviewController">
+<AnchorPane fx:id="anchorId" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #fbfaf8;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sem1project.tasktracker.controller.ResizeviewController">
    <children>
       <Text layoutX="267.0" layoutY="54.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Resize">
          <font>
